frontend/src/scenes/max/components/QuestionInput.scss
.QuestionInput__SuggestionsList {
    opacity: 0;
    transition:
        opacity 150ms ease-out,
        transform 150ms ease-out;
    transform: scale(0.95) translateY(-0.5rem);

    &--visible {
        opacity: 1;
        transform: scale(1) translateY(0);
    }
}

.QuestionInput__QuestionSuggestion {
    opacity: 0;
    animation: QuestionInput__QuestionSuggestion__slide-in-fade-down 60ms ease-out forwards;
    animation-delay: calc(var(--index) * 25ms);
}

@keyframes QuestionInput__QuestionSuggestion__slide-in-fade-down {
    from {
        opacity: 0;
        transform: translateY(-0.5rem);
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}

